Firefox fix for button overflowing event check in module

--- a/src/components/EventCheckIn/style.less
+++ b/src/components/EventCheckIn/style.less
@@ -30,6 +30,7 @@
       color: @blue-3;
       border: none;
       margin-right: 20px;
+      width:50%;
     }
 
     .submit {
